Moved the conductivity tester probes down a bit to encourage the user to dip them in the water without dipping the light bulb in the water too
Added credits
Fixed: Can't evaporate all the water
Limited salt and sugar amounts to 500g each
Made salt and sugar grains each mass of 5g
Made salt grains smaller than sugar grains
Started modeling Solution instead of Water
Made the solute appear as a rectangle taking up the full width of the beaker
# 0.00.14 (52087) May 18, 2011
Added collisions between the crystals and the beaker side walls
Made the clump grow faster so it matches with the displaced volume look as a linear function of the L/mole precipitate so sugar grows faster than salt (per mole)
Keep track of how many moles of crystal are in the air, since we need to prevent user from adding more than 10 moles to the system
Fixed: displaced volume isn't used for collision testing
Fixed: incorrect image for sugar dispenser when sugar is depleted
Show empty dispensers when user has already used the max amount of solute
Fixed: When a solute has 10 moles in the system, its dispenser shouldn't emit any more solute
Merged IntroModel with SugarAndSaltSolutionModel
Fixed: Water can overflow the beaker when solutes precipitate and you add water from the top faucet
Fixed: Crystals don't dissolve at the true top of the water (accounting for solid precipitate displacement)
Fixed: Solid precipitate should push up the water level, so that every mole of salt takes up 0.02699 L, and every mole of sugar takes up 0.2157 L
# 0.00.13 (52028) May 17, 2011
Fixed: probes get buried in precipitated clump of salt and can't be retrieved
Fixed: light rays intercept mouse events, making it difficult to use the upper faucet slider
Made so that any part of the conductivity tester probe conducts instead of just the very center of the tip
# 0.00.12 (52008) May 16, 2011
Changed brightness range so that it can accommodate the entire salinity range, up to saturation